[gd_scene load_steps=5 format=3 uid="uid://bmqskontyrf81"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_i71fc"]

[sub_resource type="GDScript" id="GDScript_g4aku"]
script/source = "extends Label

func _process(delta):
	self.text = str(Config.score)
"

[sub_resource type="GDScript" id="GDScript_3ntap"]
script/source = "extends Label


func _process(delta):
	self.text = str(Config.hitpoints)
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gnlkn"]

[node name="hud" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_i71fc")

[node name="Score" type="Label" parent="."]
offset_left = 73.0
offset_top = 25.0
offset_right = 240.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 50
script = SubResource("GDScript_g4aku")
metadata/_edit_use_anchors_ = true

[node name="Hitpoints" type="Label" parent="."]
offset_left = 274.0
offset_top = 29.0
offset_right = 369.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 50
script = SubResource("GDScript_3ntap")
metadata/_edit_use_anchors_ = true

[node name="Label1" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.0868056
anchor_right = 0.126736
offset_left = 293.0
offset_top = 188.0
offset_right = 819.0
offset_bottom = 341.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 466.0
offset_top = 351.0
offset_right = 715.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_gnlkn")
text = "Restart"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 469.0
offset_top = 470.0
offset_right = 718.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_gnlkn")
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 388.0
offset_top = 28.0
offset_right = 626.0
offset_bottom = 105.0
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Wave: "
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 324)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
